[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "A Python project template with Flask and Instagrapi."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0"
pywhatkit = "^5.0"            # WhatsApp messaging automation
selenium = "^4.0"             # For Web automation (WhatsApp Web)
twilio = "^7.0"               # For sending messages via Twilio API
termcolor = "^1.1"            # For colored terminal output
requests = "^2.25.1"          # For handling HTTP requests

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"  # Testing framework
black = "^23.9.0"  # Code formatter

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
